# ceph-k8s-backup

./: .dockerignore  Dockerfile  LICENSE  README.md  backup-container.dockerfile  pyproject.toml  rbd-backup.sh
ceph_backup/: backup.py  metadata.py  metrics.py
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  cronjob.yaml  jaeger-deployment.yaml  jaeger-service.yaml  jaeger-statefulset.yaml  metrics-deployment.yaml  metrics-poddisruptionbudget.yaml  metrics-service.yaml  serviceaccount.yaml
scripts/: docker_build_push.sh
test-k8s/: app.yml  data.yml  job.yml  metrics.yml  repo.yml
